// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`to-have-state-satisfying <assertion> fails when the actual does not match the expected 1`] = `
"expected <div class=\\"count\\">0<button class=\\"increment\\">Increment</button></div>
to have state satisfying to have keys [ 'caunt', 'number' ]"
`;

exports[`to-have-state-satisfying <assertion> when negated fails when the actual does match the expected 1`] = `
"expected <div class=\\"count\\">0<button class=\\"increment\\">Increment</button></div>
to have state satisfying not to have keys [ 'count' ]"
`;

exports[`to-have-state-satisfying <object> fails when the actual does not match the expected 1`] = `
"expected <div class=\\"count\\">0<button class=\\"increment\\">Increment</button></div>
to have state satisfying { count: 3, number: 0 }

{
  count: 0 // should equal 3
  // missing number: 0
}"
`;
